--- a/caffeine_tracker/templates/base.html
+++ b/caffeine_tracker/templates/base.html
@@ -35,5 +35,7 @@ if ('querySelector' in document && 'addEventListener' in window  && ("classList"
   </head>
   <body>
     {% block body %}{% endblock %}
+    <script src="{% static 'js/jquery.js' %}"></script>
+    {% block extrajs %}{% endblock %}
   </body>
 </html>
