--- a/caffeine_tracker/apps/record/templates/record/record.html
+++ b/caffeine_tracker/apps/record/templates/record/record.html
@@ -13,7 +13,7 @@
 <form action="" method="post" id="record-form">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Submit" />
+    <input type="submit" value="Save" />
 </form>
 {% endblock %}
 
