--- a/caffeine_tracker/templates/base.html
+++ b/caffeine_tracker/templates/base.html
@@ -15,6 +15,7 @@
       <link href="{% static 'css/head.css' %}?_={{ request.extra.CACHE_BUSTER }}" rel="stylesheet"/>
       <link href="{% static 'css/main.css' %}?_={{ request.extra.CACHE_BUSTER }}" rel="stylesheet"/>
     {% endif %}
+    <style>{% block styles %}{% endblock %}</style>
     <title>{% block title %}{% endblock %}</title>
     <meta name="" value=""/>
     <script>
