--- a/caffeine_tracker/apps/record/templates/record/record.html
+++ b/caffeine_tracker/apps/record/templates/record/record.html
@@ -83,8 +83,15 @@
 
       <div data-ct-ui-show-item data-ct-data-new-item class="ui--removed">
         <p>Enter new item.</p>
-        <p><label>Name<input type="text" id="new_item"/></label></p>
-        <p data-ct-ui-new-item-mode="absolute"><label>Caffeine content (mg)<input type="number" id="absolute" data-ct-data-new-item-input/></label></p>
+        <p>
+          <label>Name<input list="items" id="new_item" data-ct-datalist-value/></label>
+          <datalist id="items" data-ct-value-target="absolute">
+          {% for item in items %}
+            <option value="{{ item.description }}" data-ct-data-value="{{ item.caffeine }}"/>
+          {% endfor %}
+          </datalist>
+        </p>
+        <p data-ct-ui-new-item-mode="absolute"><label>Caffeine content (mg)<input type="number" id="absolute" data-ct-data-new-item-input data-ct-value-target-absolute/></label></p>
         <div data-ct-ui-new-item-mode="concentration">
           <fieldset><ledgend>Caffeine concentration</ledgend>
             <label>mg<input type="number" data-ct-data-new-item-input/></label>
@@ -113,9 +120,4 @@
     </form>
 </script>
 
-{% endblock %}
-
-
-{% block extrajs %}
-<!--<script src="{% static 'js/typeahead.bundle.js' %}"></script>-->
 {% endblock %}
